@@ -12,6 +12,7 @@ PS: In the standard Python distribution, this file is encoded in Latin-1.
 
 David Abrahams
 Jim Ahlstrom
+Farhan Ahmad
 Jyrki Alakuijala
 Billy G. Allie
 Kevin Altis
@@ -29,6 +30,7 @@ Jan-Hein B"uhrman
 Donovan Baarda
 Attila Babo
 Alfonso Baciero
+Marcin Bachry
 Dwayne Bailey
 Stig Bakken
 Greg Ball
@@ -166,6 +168,7 @@ Roger Dev
 Raghuram Devarakonda
 Toby Dickenson
 Mark Dickinson
+Daniel Diniz
 Yves Dionne
 Daniel Dittmar
 Jaromir Dolecek
