@@ -47,6 +47,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #4066: smtplib.SMTP_SSL._get_socket now correctly returns the socket.
+  Patch by Farhan Ahmad, test by Marcin Bachry.
+
 - Issue #1655: Make imaplib IPv6-capable. Patch by Derek Morr.
 
 - Issue #1664: Make nntplib IPv6-capable. Patch by Derek Morr.
